<resources>
    <string name="app_name">高校资助</string>
    
    <string name="welcome_speech">高校资助，助你圆梦！</string>

    <string name="bottom_bar_home">主页</string>
    <string name="bottom_bar_explore">查询</string>
    <string name="bottom_bar_mine">我的</string>

    <string name="title_my_info">我的信息</string>
    <string name="title_my_apply">我的申请</string>
    <string name="title_message">我的消息</string>
    <string name="title_help">帮助</string>
    <string name="title_setting">设置</string>
    <string name="title_modify_password">修改密码</string>
    <string name="title_exit">退出当前账号</string>
    <string name="title_app_info">关于师大资助</string>
    <string name="title_notice_list">通知列表</string>
    <string name="toast_refresh_succeed">刷新成功</string>

    <string name="loading_text">拼命加载中&#8230;</string>
    <string name="loading_text_login">登录中&#8230;</string>

    <string name="hint_account">请输入学号</string>
    <string name="hint_password">请输入身份证后六位</string>
    <string name="hint_account_teacher">请输入工号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="title_login">登陆</string>
    <string name="title_confirm">确定</string>
    <string name="title_action_bar_login">请登陆</string>

    <string name="login_failed_net_error">当前网络不太顺畅~</string>
    <string name="toast_login_account_error">账号或密码错误!</string>
    <string name="toast_unknown_error">未知错误，请重试！！！</string>

    <string name="btn_apply">申请</string>
    <string name="btn_submit">提交</string>
    <string name="title_project_list">项目分类</string>
    <string name="title_apply_table">申请表</string>
    <string name="title_apply_table_succeed">提交成功</string>

    <string name="dialog_warning">信息尚未保存，确认退出？</string>
    <string name="dialog_confirm">提交后信息将不能修改，确认提交？</string>
    <string name="btn_save">保存</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>


    <string-array name="project_info_title">
        <item>"学年："</item>
        <item>"名额："</item>
        <item>"金额："</item>
        <item>"申报时间："</item>
        <item>"申报条件"</item>
    </string-array>

    <string-array name="project_info_content_key">
        <item>"z_school_year"</item>
        <item>"z_quota"</item>
        <item>"z_sum"</item>
        <item>"z_time"</item>
        <item>"z_describe"</item>
    </string-array>

    <string-array name="info_item">
        <item>"姓名"</item>
        <item>"性别"</item>
        <item>"学号"</item>
        <item>"身份证号"</item>
        <item>"贫困生"</item>
        <item>"政治面貌"</item>
        <item>"学院"</item>
        <item>"班级"</item>
        <item>"入学时间"</item>
        <item>"年制"</item>
        <item>"电话"</item>
    </string-array>

    <string-array name="apply_table_scholarship">
        <item>"成绩(学年绩点)"</item>
        <item>"学生工作"</item>
        <item>"个人荣誉"</item>
        <item>"竞赛科研"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_assistance">
        <item>"成绩(学年绩点)"</item>
        <item>"任职情况"</item>
        <item>"个人荣誉"</item>
        <item>"竞赛科研"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_loan">
        <item>"贷款金额"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_job">
        <item>"成绩(学年绩点)"</item>
        <item>"学生工作"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_scholarship_with_time">
        <item>"成绩(学年绩点)"</item>
        <item>"学生工作"</item>
        <item>"个人荣誉"</item>
        <item>"竞赛科研"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_assistance_with_time">
        <item>"成绩(学年绩点)"</item>
        <item>"任职情况"</item>
        <item>"个人荣誉"</item>
        <item>"竞赛科研"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_loan_with_time">
        <item>"贷款金额"</item>
        <item>"申请理由"</item>
    </string-array>

    <string-array name="apply_table_job_with_time">
        <item>"成绩(学年绩点)"</item>
        <item>"学生工作"</item>
        <item>"申请理由"</item>
    </string-array>

    <string name="submit_time">提交时间</string>

    <string name="apply_table_name">姓名：</string>
    <string name="apply_table_id">学号：</string>
    <string name="apply_table_college">学院：</string>
    <string name="apply_table_class">班级：</string>
    <string name="warring_can_not_null">不能为空，若无内容，请填写无</string>
    
    <string-array name="project_title_array">
        <item>国家奖学金</item>
        <item>校级奖学金</item>
        <item>励志奖学金</item>
        <item>企业奖学金</item>
        <item>勤工俭学</item>
        <item>助学贷款</item>
        <item>临时补助</item>
        <item>贫困生</item>
        <item>开发中</item>
        <item>敬请期待</item>
    </string-array>

    <string name="status_not_verify">审核中</string>
    <string name="status_pass">已通过</string>
    <string name="status_refuse">未通过</string>

    <string name="hint_original_password">请输入原始密码</string>
    <string name="hint_password_after_modify">请输入修改后的密码</string>
    <string name="hint_password_after_modify_again">再次输入修改后的密码</string>
    <string name="toast_not_same">修改后的密码输入不一致</string>
    <string name="about_app_describe">一款支持在线申报和审核的应用。\n不用东奔西走盖章交表，轻轻松松完成申请。\n不用反复复印浪费纸张，节能减排从我做起。\n欧了</string>
    <string name="app_version">高校资助 v1.0</string>

    <string name="btn_send">发送</string>

    <string-array name="login_tab_names">
        <item>学生登陆</item>
        <item>教师登陆</item>
    </string-array>

</resources>
