<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hqj.universityfinance.customview.ClearEditText
        android:id="@+id/original_password_tv"
        android:hint="@string/hint_original_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.hqj.universityfinance.customview.ClearEditText
        android:id="@+id/modify_password_tv"
        android:hint="@string/hint_password_after_modify"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.hqj.universityfinance.customview.ClearEditText
        android:id="@+id/modify_password_again_tv"
        android:hint="@string/hint_password_after_modify_again"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/confirm_btn"
        android:text="@string/title_confirm"
        android:textSize="@dimen/login_btn_text_size"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="#4169e1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>