<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/modify_password_tv"
        style="@style/list_item"
        android:text="@string/title_modify_password"
        android:drawableStart="@drawable/icon_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/app_tv"
        style="@style/list_item"
        android:text="@string/title_app_info"
        android:drawableStart="@drawable/icon_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sign_out_btn"
            android:text="@string/title_exit"
            android:textSize="@dimen/list_item_text_size"
            android:textColor="@color/color_text"
            android:background="#FF7F50"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>