<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/student_info"
        android:background="@drawable/list_item_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_photo"
            android:src="@drawable/photo"
            android:layout_margin="@dimen/list_item_margin"
            android:layout_width="@dimen/icons_size"
            android:layout_height="@dimen/student_photo" />
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/list_item_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_name"
                android:text="@string/loading_text"
                android:textSize="@dimen/user_name_text_size"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_id"
                android:text="@string/loading_text"
                android:layout_marginTop="@dimen/list_item_margin"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:src="@drawable/arrow"
            android:layout_marginEnd="@dimen/list_item_margin"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@drawable/space_bg"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/my_apply_tv"
        style="@style/list_item"
        android:text="@string/title_my_apply"
        android:drawableStart="@drawable/icon_my_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/message_tv"
        style="@style/list_item"
        android:text="@string/title_message"
        android:drawableStart="@drawable/icon_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@drawable/space_bg"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/help_tv"
        style="@style/list_item"
        android:text="@string/title_help"
        android:drawableStart="@drawable/icon_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/setting_tv"
        style="@style/list_item"
        android:text="@string/title_setting"
        android:drawableStart="@drawable/icon_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>