<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/student_info"
        android:background="@drawable/list_item_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_photo"
            android:src="@drawable/photo"
            android:layout_margin="@dimen/list_item_margin"
            android:layout_width="@dimen/icons_size"
            android:layout_height="@dimen/student_photo" />

        <RelativeLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/list_item_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_name"
                android:text="@string/apply_table_name"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_id"
                android:layout_below="@+id/title_name"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:text="@string/apply_table_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_name"
                android:layout_toRightOf="@+id/title_name"
                android:text="@string/loading_text"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_id"
                android:layout_toRightOf="@+id/title_id"
                android:layout_below="@+id/user_name"
                android:text="@string/loading_text"
                android:textColor="@color/color_text"
                android:textSize="@dimen/icons_title_text_size"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_college"
                android:layout_below="@id/title_id"
                android:text="@string/apply_table_college"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_college"
                android:layout_toRightOf="@+id/title_college"
                android:layout_below="@id/user_id"
                android:text="@string/loading_text"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_class"
                android:layout_below="@+id/title_college"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:text="@string/apply_table_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_class"
                android:layout_toRightOf="@+id/title_class"
                android:layout_below="@id/user_college"
                android:text="@string/loading_text"
                android:textSize="@dimen/icons_title_text_size"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview_apply_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>